# displayctl

./: .gitignore  HARDWARE.md  README.md  tsconfig.json
.github/workflows/: check-esbuild.yml  update-releases.yml
apps/gnome-extension/: metadata.json  tsconfig.json
apps/gnome-extension/src/: ambient.d.ts  ddcutil.ts  extension.ts  overlay.ts
apps/gnome-extension/src/services/: ddcutil.ts  display-config.ts
apps/gnome-extension/src/ui/: indicator-menu.ts  overlay.ts  refresh-rate-menu.ts
apps/gnome-shell/extension/: extension.js  metadata.json
apps/windows-app/: Cargo.toml  installer.iss  resources.rc
apps/windows-app/src/: main.rs  menu.rs  monitor.rs  theme.rs  tray.rs  utils.rs
apps/windows-app/src/menu/: paint.rs  selector.rs
