[package]
name = "displayctl"
version = "0.1.0"
edition = "2021"

[dependencies]
png = "0.17"

[build-dependencies]
embed-resource = "2.5"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_Devices_Display",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_System_Console",
]
